# poker

./: LICENSE.md  generate_quiz.py  pyproject.toml
util/: deck.py  table.py
