[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["Gary Song"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.1"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
